[tool.poetry]
name = "radviz-plotly"
version = "0.2.0"
description = "A Python package for 2D and 3D Radial Visualization using Plotly with attribute sorting"
authors = ["elewah <abdelrahman.elewah@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/elewah/RadViz-Plotly"
repository = "https://github.com/elewah/RadViz-Plotly.git"
keywords = ["visualization", "radviz", "plotly", "data-science", "3d-visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.poetry.dependencies]
python = "^3.8"
plotly = ">=4.0.0"
pandas = ">=1.0.0"
numpy = ">=1.18.0"
scikit-learn = {version = ">=0.24.0", optional = true}
transformations = {version = ">=2020.1.1", optional = true}

[tool.poetry.extras]
sorting = ["scikit-learn", "transformations"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"